# synoFW

./: CMakeLists.txt  README.md  config.json  main.cpp
api/: API_FS  API_INFO.http  API_VS  Api_Info.json  RequestResponse.json
data/: db_cache.json
ifc/: Imdb.h  Logger.h  Observer.h  Subject.cpp  Subject.h
inc/: API.h  ActiveObject.h  CacheMgr.h  Cli.h  ConfigHelper.h  DatabaseObject.h  Dispatcher.h  ErrorCodes.h  EventLogger.h  FileLogger.h  FileMgr.h  FileStationAPI.h  FilenameStructure.h  HttpRequests.h  Imdb.h  ImdbAkas.h  ImdbBasics.h  ImdbCrew.h  ImdbEpisode.h  ImdbName.h  ImdbStructure.h  JsonReadWrite.h  JsonStreamer.h  Methods.h  ParamHandling.h  Queue.h  RequestHandler.h  RequestUrlBuilder.h  StatusLogger.h  TablePrinter.h  Utilities.h  VideoStationAPI.h
src/: API.cpp  CacheMgr.cpp  FileStationAPI.cpp  Imdb.cpp  ImdbStructure.cpp  JsonReadWrite.cpp  JsonStreamer.cpp  ParamHandling.cpp  RequestHandler.cpp  TablePrinter.cpp  VideoStationAPI.cpp
unittest/: CacheTest.h  FileStationApiTest.h  FileStationTest.h  FsRequestTest.h  FsResponseTest.h  MockAPI.h  TestStartup.h  VsRequestTest.h
